Updated links, news, and profile picture

--- a/index.html
+++ b/index.html
@@ -16,18 +16,19 @@
 
     </div>
     <div class="item-b">
-        <img src="./icons/portrait.jpg" alt="Kimi gazing at the camera" style="width:200px">
+        <img src="./icons/portrait.jpg" alt="A black and white photograph of Kimi gazing three-quarters away from the camera." style="width:200px">
         <p class="connect">kwenzel [at] cs [dot] cmu [dot] edu</p>
         <a href="https://www.linkedin.com/in/kimiwenzel/" target="_blank" rel="noopener noreferrer"><img src="./icons/linkedin.png" alt="LinkedIn"></a>
+        <a href="https://twitter.com/kimiwenzel" target="_blank" rel="noopener noreferrer"><img src="./icons/twitter.png" alt="Twitter"></a>
         <a href="https://scholar.google.com/citations?user=z-9xGHgAAAAJ&hl=en" target="_blank" rel="noopener noreferrer"><img src="./icons/scholar.png" alt="Google Scholar"></a>
-
+        
     </div>
     <div class="item-c">
         <div>
             <h3 class="time">Present</h3>
-            <p>I’m a first year HCI PhD student at Carnegie Mellon University advised by Geoff Kaufman. My research focuses on measuring and mitigating social disparities in language technologies.</p>
-            <h3 class="time">Past</h3>
-            <p>I previously studied usable privacy & security under Lorrie Cranor, Laura Dabbish, and Jason&nbsp;Hong.</p>
+            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a>. My current research focuses on (1) understanding allyship and responses to surveillance Post-Roe and (2) measuring and mitigating social disparities in language technologies.</p>
+            <h3 class="time">Past</h3> 
+            <p>I previously studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank" class=names>Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="blank" class=names>Laura Dabbish</a>, and <a href="http://www.cs.cmu.edu/~jasonh/" target="blank" class=names>Jason&nbsp;Hong</a>.</p>
                 <p>Before beginning my PhD, I worked on some <a href="./projects.html">cool projects</a> supporting education equity in STEM.</p>
                 <p>I completed my B.A. in computer science at Columbia University, Barnard&nbsp;College.</p>
             <h3 class="time">Forever</h3>
@@ -35,9 +36,11 @@
         </div>
         <div class="medium">
             <h3>Publications</h3>
-            <p>To Self-Persuade or Be Persuaded: Examining Interventions for Users' Privacy Setting Selection (2022)</p>
+            <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
+                <p>July 2022: Ended my 10-year social media hibernation and made a <a href="https://twitter.com/kimiwenzel" target="_blank" class=names>Twitter</a>. Follow for study updates!</p>
+                <p>May 2022: Presented my social cybersecurity paper at ACM CHI in New Orleans, LA</p>
                 <p>Nov 2021: My co-first author paper on social cybersecurity was conditionally accepted to ACM&nbsp;CHI</p>
                 <p>Sep 2021: Began my PhD program at the HCII</p>
                 <p>Apr 2021: Delivered final design for the Joan Ganz Cooney Center at Sesame&nbsp;Workshop</p>
