--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
+                <p>Sep 2022: Submitted to ACM CHI 2023 - be on the lookout for a new paper :)</p>
+                <p>Sep 2022: Passed my oral qualifying exam for my PhD</p>
+                <p>Sep 2022: Began working as a communication and language consultant at CMU</p>
                 <p>July 2022: Ended my 10-year social media hibernation and made a <a href="https://twitter.com/kimiwenzel" target="_blank" class=names>Twitter</a>. Follow for study updates!</p>
                 <p>May 2022: Presented my social cybersecurity paper at ACM CHI in New Orleans, LA</p>
                 <p>Nov 2021: My co-first author paper on social cybersecurity was conditionally accepted to ACM&nbsp;CHI</p>
