Updated research interests

--- a/index.html
+++ b/index.html
@@ -26,7 +26,18 @@
     <div class="item-c">
         <div>
             <h3 class="time">Present</h3>
-            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a>. My current research focuses on (1) understanding allyship and responses to surveillance Post-Roe and (2) measuring and mitigating social disparities in language technologies.</p>
+            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a>. My work investigates how users conceptualize and react to automated bias. My current projects focus on language technology:</p>
+            <ol>
+                <li><b>Defining & Measuring Harm:</b> What are users’ psychological responses to errors in language technology? How do these responses vary based on individual differences, especially across marginalized identities?</li>
+                <li><b>Mitigating & Reversing Harm:</b> How might we design to mitigate or reverse the psychological harm inflicted by biases in language technology?
+                </li>
+            </ol>
+            <p>Other research I’m excited about:</p>
+            <ul>
+                <li>How do users perceive fairness in algorithmic decision-making systems? How do different users conceptualize ideas of right and wrong, and how might this affect their behavior?</li>
+                <li>How have users’ perceptions of surveillance changed Post-Roe? How have users’ privacy and security behavior changed Post-Roe? How do these perceptions and behaviors vary across different gender, reproductive, and national identities?</li>
+            </ul>
+            
             <h3 class="time">Past</h3> 
             <p>I previously studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank" class=names>Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="blank" class=names>Laura Dabbish</a>, and <a href="http://www.cs.cmu.edu/~jasonh/" target="blank" class=names>Jason&nbsp;Hong</a>.</p>
                 <p>Before beginning my PhD, I worked on some <a href="./projects.html">cool projects</a> supporting education equity in STEM.</p>
@@ -39,7 +50,7 @@
             <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
-                <p>Sep 2022: Submitted to ACM CHI 2023 - be on the lookout for a new paper :)</p>
+                <p>Sep 2022: Submitted to ACM CHI 2023 - be on the lookout for a new paper </p>
                 <p>Sep 2022: Passed my oral qualifying exam for my PhD</p>
                 <p>Sep 2022: Began working as a communication and language consultant at CMU</p>
                 <p>July 2022: Ended my 10-year social media hibernation and made a <a href="https://twitter.com/kimiwenzel" target="_blank" class=names>Twitter</a>. Follow for study updates!</p>
