added eHeart Lab

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="item-c">
         <div>
             <h3 class="time">Present</h3>
-            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a>. My work investigates how users conceptualize and react to automated bias. My main project focuses on language technology:</p>
+            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a> in the <a href="https://cmu-eheart-lab.github.io/" target="blank" class=names>eHeart Lab</a>. My work investigates how users conceptualize and react to automated bias. My main project focuses on language technology:</p>
             <ol>
                 <li><b>Defining & Measuring Harm:</b> What are users’ psychological responses to bias in language technology? How do these responses vary based on individual differences, especially across marginalized identities?</li>
                 <li><b>Mitigating & Reversing Harm:</b> How might we design to mitigate or reverse the psychological harm inflicted by bias in language technology?
