--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         </div>
         <div class="medium">
             <h3>Publications</h3>
-            <p>Kimi Wenzel, Nitya Devireddy, Cam Davidson, and Geoff Kaufman. 2023. Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition. In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI ’23), April 23–28, 2023, Hamburg, Germany. ACM, New York, NY, USA, 14 pages.</p>
+            <p>Kimi Wenzel and Geoff Kaufman. 2023. Challenges in Designing Racially Inclusive Language Technologies. CUI@CHI: Inclusive Design of CUIs Across Modalities and Mobilities.</p>
+            <p>Kimi Wenzel, Nitya Devireddy, Cam Davidson, and Geoff Kaufman. 2023. <a href="https://arxiv.org/pdf/2302.12326.pdf" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a> In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI ’23), April 23–28, 2023, Hamburg, Germany. ACM, New York, NY, USA, 14 pages.</p>
             <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
+                <p>Mar 2023: My first author workshop paper on race was accepted to CUI@CHI</p>
                 <p>Jan 2023: My first author paper on racism in voice assistants was accepted to ACM CHI</p>
-                <p>Jan 2023: My essay on regenerative wellness is now available for purchase in <a href="https://chickpeamagazine.com/collections/issues/products/issue-36-sustainability" target="_blank" class=names>Chickpea Mag</a></p>
+                <p>Jan 2023: My essay on eco-anxiety and wellness is now available for purchase in <a href="https://chickpeamagazine.com/collections/issues/products/issue-36-sustainability" target="_blank" class=names>Chickpea Mag</a></p>
                 <p>Dec 2022: Interviewed by the User Experience Association at CMU</p>
                 <p>Nov 2022: Nominated to give a TEDx talk</p>
                 <p>Sep 2022: Passed my oral qualifying exam for my PhD</p>
