--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
+                <p>Jul 2023: Served as an SV at DIS</p>
+                <p>May 2023: CHInnected in Germany</p>
                 <p>Mar 2023: Delivered my TEDx talk</p>
                 <p>Mar 2023: My first author workshop paper on race was accepted to CUI@CHI</p>
                 <p>Jan 2023: My first author paper on racism in voice assistants was accepted to ACM CHI</p>
