--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="item-c">
         <div>
             <h3 class="time">Present</h3>
-            <p>I’m a second year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a> in the <a href="https://cmu-eheart-lab.github.io/" target="blank" class=names>eHeart Lab</a>. My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. My main project focuses on language technology:</p>
+            <p>I’m a third year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a> (<a href="https://cmu-eheart-lab.github.io/" target="blank" class=names>eHeart Lab</a>) and <a href="http://www.lauradabbish.com/" target="_blank" class=names>Laura Dabbish</a> (<a href="http://coexlab.com/" target="blank" class=names>CoEx Lab</a>). My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions. My main project focuses on language technology:</p>
             <ol>
                 <li><b>Defining & Measuring Harm:</b> What are users’ psychological responses to bias in language technology? How do these responses vary based on individual differences, especially across marginalized identities?</li>
                 <li><b>Mitigating & Reversing Harm:</b> How might we design to mitigate or reverse the psychological harm inflicted by bias in language technology?
@@ -47,11 +47,13 @@
         </div>
         <div class="medium">
             <h3>Publications</h3>
+            <p>Kimi Wenzel and Geoff Kaufman. 2023. Beyond Fairness: Alternative Moral Dimensions for Assessing Algorithms and Designing Systems. pluralism@CSCW.</p>
             <p>Kimi Wenzel and Geoff Kaufman. 2023. <a href="https://arxiv.org/pdf/2303.13546.pdf" target="_blank">Challenges in Designing Racially Inclusive Language Technologies.</a> CUI@CHI: Inclusive Design of CUIs Across Modalities and Mobilities.</p>
             <p>Kimi Wenzel, Nitya Devireddy, Cam Davidson, and Geoff Kaufman. 2023. <a href="https://arxiv.org/pdf/2302.12326.pdf" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a> In Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems (CHI ’23), April 23–28, 2023, Hamburg, Germany. ACM, New York, NY, USA, 14 pages.</p>
             <p>*Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a> In CHI Conference on Human Factors in Computing Systems (CHI '22), April 29-May 5, 2022, New Orleans, LA, USA. ACM, New York, NY, USA 17 Pages.</p>
             <h3>News</h3>
             <div>
+                <p>Sep 2023: My first author workshop paper critiquing recent fairness work was accepted to CSCW</p>
                 <p>Jul 2023: Served as an SV at DIS</p>
                 <p>May 2023: CHInnected in Germany</p>
                 <p>Mar 2023: Delivered my TEDx talk</p>
