--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="item-c">
         <div>
             <h3 class="time">Present</h3>
-            <p>I’m a third year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff Kaufman</a> (<a href="https://cmu-eheart-lab.github.io/" target="blank" class=names>eHeart Lab</a>) and <a href="http://www.lauradabbish.com/" target="_blank" class=names>Laura Dabbish</a> (<a href="http://coexlab.com/" target="blank" class=names>CoEx Lab</a>). My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions. My main project focuses on language technology:</p>
+            <p>I’m a third year HCI PhD student at <a href="https://www.hcii.cmu.edu/" target="blank" class=names>Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank" class=names>Geoff&nbsp;Kaufman</a> (<a href="https://cmu-eheart-lab.github.io/" target="blank" class=names>eHeart&nbsp;Lab</a>) and <a href="http://www.lauradabbish.com/" target="_blank" class=names>Laura&nbsp;Dabbish</a> (<a href="http://coexlab.com/" target="blank" class=names>CoEx&nbsp;Lab</a>). My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions. My main project focuses on language technology:</p>
             <ol>
                 <li><b>Defining & Measuring Harm:</b> What are users’ psychological responses to bias in language technology? How do these responses vary based on individual differences, especially across marginalized identities?</li>
                 <li><b>Mitigating & Reversing Harm:</b> How might we design to mitigate or reverse the psychological harm inflicted by bias in language technology?
@@ -34,7 +34,8 @@
             </ol>
             <p>Other research I’m excited about:</p>
             <ul>
-                <li>How do users perceive fairness in algorithmic decision-making systems? How do different users conceptualize ideas of right and wrong, and how might this affect their behavior?</li>
+                <li>How might we evaluate the normative values imbued in technologies? How might we persuade tech practitioners to design and build responsibly?</li>
+                <li>What are the harms of generative AI, especially for marginalized groups? How might we design to mitigate these harms?</li>
                 <li>How have users’ perceptions of surveillance changed Post-Roe? How have users’ privacy and security behavior changed Post-Roe? How do these perceptions and behaviors vary across different gender, reproductive, and national identities?</li>
             </ul>
             
