--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ol>
             <p>Other research I’m excited about:</p>
             <ul>
-                <li>How might we evaluate the normative values imbued in technologies? How might we persuade tech practitioners to design and build responsibly?</li>
+                <li>How might we evaluate the normative values embedded in various technologies? How might we persuade tech practitioners to design and build more responsibly?</li>
                 <li>What are the harms of generative AI, especially for marginalized groups? How might we design to mitigate these harms?</li>
                 <li>How have users’ perceptions of surveillance changed Post-Roe? How have users’ privacy and security behavior changed Post-Roe? How do these perceptions and behaviors vary across different gender, reproductive, and national identities?</li>
             </ul>
