--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
-											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. <br><a href="https://arxiv.org/pdf/2403.00265.pdf" target="_blank>Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
+											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. <br><a href="https://arxiv.org/pdf/2403.00265.pdf" target="_blank">Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
 											<li><code>CHI</code> Kimi Wenzel, Nitya Devireddy, Cam Davison, and Geoff Kaufman. 2023. <br><a href="https://doi.org/10.1145/3544548.3581357" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a></li>
 											<li><code>CHI</code> *Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <br><a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a></li>
 										</ul>
