--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
-											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. <br><a href="https://arxiv.org/pdf/2403.00265.pdf" target="_blank">Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
+											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. 🏆 Best Paper Award. <br><a href="https://doi.org/10.1145/3613904.3642900" target="_blank">Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
 											<li><code>CHI</code> Kimi Wenzel, Nitya Devireddy, Cam Davison, and Geoff Kaufman. 2023. <br><a href="https://doi.org/10.1145/3544548.3581357" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a></li>
 											<li><code>CHI</code> *Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <br><a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a></li>
 										</ul>
@@ -110,7 +110,8 @@
 									<h2>Academic History</h2>
 								</header>
 								<div class="content">
-									<p>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>.
+									<p>In 2024 I was awarded the <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Center for Machine Learning and Health Translational Fellowship</a>. I am also a Summer 2024 intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple</a>.
+									<br>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>.
 									<br>I completed my B.A. in computer science at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a>, <a href="https://www.barnard.edu/" target="_blank">Barnard College</a>.
 									<br>CV available upon request.</p>										
 								</div>
