--- a/research.html
+++ b/research.html
@@ -110,7 +110,7 @@
 									<h2>Academic History</h2>
 								</header>
 								<div class="content">
-									<p>In 2024 I was awarded the <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Center for Machine Learning and Health Translational Fellowship</a>. I am also a Summer 2024 intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple</a>.
+									<p>I am a 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. I am also a Summer 2024 intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple</a>.
 									<br>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>.
 									<br>I completed my B.A. in computer science at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a>, <a href="https://www.barnard.edu/" target="_blank">Barnard College</a>.
 									<br>CV available upon request.</p>										
