--- a/research.html
+++ b/research.html
@@ -27,7 +27,8 @@
 								<li><a href="./index.html" class="button small icon solid fa-home">Home</a>  <a href="./speaking.html" class="button small icon solid fa-microphone">Speaking</a> </li>
 							</ul>
 							<h2><b>Research</b></h2>
-							<p class="major">I’m a third year HCI PhD student at <a href="https://hcii.cmu.edu/" target="_blank">Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> and <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>. I work in the <a href="https://cmu-eheart-lab.github.io/">eHeart Lab</a> and <a href="http://coexlab.com/">CoEx Lab</a>.</p>
+							<p class="major">I’m a fourth year HCI PhD student at <a href="https://hcii.cmu.edu/" target="_blank">Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> and <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>. I work in the <a href="https://cmu-eheart-lab.github.io/">eHeart Lab</a> and <a href="http://coexlab.com/">CoEx Lab</a>.</p>
+							<p>Recent affiliations include: 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. 2024 Intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple AI/ML</a>.
 							<p>My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions.</p>
 						</div>
 						<div class="image">
@@ -110,7 +111,6 @@
 									<h2>Academic History</h2>
 								</header>
 								<div class="content">
-									<p>I am a 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. I am also a Summer 2024 intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple</a>.
 									<br>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>.
 									<br>I completed my B.A. in computer science at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a>, <a href="https://www.barnard.edu/" target="_blank">Barnard College</a>.
 									<br>CV available upon request.</p>										
