--- a/research.html
+++ b/research.html
@@ -28,7 +28,7 @@
 							</ul>
 							<h2><b>Research</b></h2>
 							<p class="major">I’m a fourth year HCI PhD student at <a href="https://hcii.cmu.edu/" target="_blank">Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> and <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>. I work in the <a href="https://cmu-eheart-lab.github.io/">eHeart Lab</a> and <a href="http://coexlab.com/">CoEx Lab</a>.</p>
-							<p>Recent affiliations include: 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. 2024 Intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple AI/ML</a>.
+							<p>Affiliations: 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. 2024 Summer Intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple AI/ML</a>.
 							<p>My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions.</p>
 						</div>
 						<div class="image">
