--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<section class="banner style1 orient-right content-align-left image-position-left fullscreen onload-image-fade-in onload-content-fade-left">
 						<div class="content">
 							<h1>Kimi Wenzel</h1>
-							<p class="major">(she/her) is an AI ethics researcher, speaker, and educator based at the Human-Computer Interaction Institute at Carnegie Mellon University.</p>
+							<p class="major">(she/her) is an AI design researcher, speaker, and educator based at the Human-Computer Interaction Institute at Carnegie Mellon University.</p>
 							<div class="inner">
 								<ul class="icons">
 									<li><a href="https://scholar.google.com/citations?user=z-9xGHgAAAAJ&hl=en" class="icon brands style2 fa-google" target="_blank"><span class="label">Scholar</span></a></li>
