--- a/research.html
+++ b/research.html
@@ -86,6 +86,18 @@
 										</ul>
 									</div>
 								</section>
+
+								<!-- Workshop Organized -->
+								<section>
+									<header>
+										<h3>Workshops Organized</h3>
+									</header>
+									<div class="content">
+										<ul class="alt">
+											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <br><a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
+										</ul>
+									</div>
+								</section>
 								
 								<!-- Workshop -->
 								<section>
