--- a/research.html
+++ b/research.html
@@ -95,7 +95,7 @@
 									<div class="content">
 										<ul class="alt">
 											<li><code>FAccT</code> Kimi Wenzel, Avijit Ghosh, Sachin Pendse, Stephanie Milani, Ajeet Singh, Laura Dabbish, Geoff Kaufman. 2025. Invisible by Design? Generative AI and Mirrors of Misrepresentation.</li>
-											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <br><a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
+											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
 										</ul>
 									</div>
 								</section>
