--- a/research.html
+++ b/research.html
@@ -124,7 +124,8 @@
 									<h2>Academic History</h2>
 								</header>
 								<div class="content">
-									<br>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>.
+									<br>Prior to my PhD, I studied usable privacy & security under <a href="https://lorrie.cranor.org/" target="_blank">Lorrie Cranor</a>, <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>, and <a href="https://www.cs.cmu.edu/~jasonh/" target="_blank">Jason Hong</a>. 
+									I also briefly studied education equity tools and interventions with <a href="https://www.audreygbennett.com/" target="_blank">Audrey Bennett</a>, <a href="https://roneglash.org/" target="_blank">Ron Eglash</a>, and <a href="https://www.cs.columbia.edu/~rwright/" target="_blank">Rebecca Wright</a>.
 									<br>I completed my B.A. in computer science at <a href="https://www.columbia.edu/" target="_blank">Columbia University</a>, <a href="https://www.barnard.edu/" target="_blank">Barnard College</a>.
 									<br>CV available upon request.</p>										
 								</div>
