--- a/research.html
+++ b/research.html
@@ -80,6 +80,7 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
+											<li><code>AIES</code> Pranav Khadpe, Kimi Wenzel, George Loewenstein, Chinmay Kulkarni, Geoff Kaufman. 2025. Explaining the Reputational Risks of AI-Mediated Communication: Messages labeled as AI-assisted are viewed as less diagnostic of the sender’s moral character.</li>
 											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. 🏆 Best Paper Award. <br><a href="https://doi.org/10.1145/3613904.3642900" target="_blank">Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
 											<li><code>CHI</code> Kimi Wenzel, Nitya Devireddy, Cam Davison, and Geoff Kaufman. 2023. <br><a href="https://doi.org/10.1145/3544548.3581357" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a></li>
 											<li><code>CHI</code> *Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <br><a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a></li>
@@ -94,7 +95,7 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
-											<li><code>FAccT</code> Kimi Wenzel, Avijit Ghosh, Sachin Pendse, Stephanie Milani, Ajeet Singh, Laura Dabbish, Geoff Kaufman. 2025. Invisible by Design? Generative AI and Mirrors of Misrepresentation.</li>
+											<li><code>FAccT</code> Kimi Wenzel, Avijit Ghosh, Sachin Pendse, Stephanie Milani, Ajeet Singh, Laura Dabbish, Geoff Kaufman. 2025. <a href="https://earthling.my.canva.site/invisible" target="_blank">Invisible by Design? Generative AI and Mirrors of Misrepresentation.</a></li>
 											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
 										</ul>
 									</div>
