--- a/research.html
+++ b/research.html
@@ -27,8 +27,8 @@
 								<li><a href="./index.html" class="button small icon solid fa-home">Home</a>  <a href="./speaking.html" class="button small icon solid fa-microphone">Speaking</a> </li>
 							</ul>
 							<h2><b>Research</b></h2>
-							<p class="major">I’m a fourth year HCI PhD student at <a href="https://hcii.cmu.edu/" target="_blank">Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> and <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>. I work in the <a href="https://cmu-eheart-lab.github.io/">eHeart Lab</a> and <a href="http://coexlab.com/">CoEx Lab</a>.</p>
-							<p>Affiliations: 2024 Center for Machine Learning and Health <a href="https://www.cs.cmu.edu/cmlh/translational-fellows" target="_blank">Translational Fellow</a>. 2024 Summer Intern at <a href="https://machinelearning.apple.com/" target="_blank">Apple AI/ML</a>.
+							<p class="major">I’m a fifth year HCI PhD student at <a href="https://hcii.cmu.edu/" target="_blank">Carnegie Mellon University</a> advised by <a href="https://www.hcii.cmu.edu/people/geoff-kaufman" target="_blank">Geoff Kaufman</a> and <a href="http://www.lauradabbish.com/" target="_blank">Laura Dabbish</a>. I work in the <a href="https://cmu-eheart-lab.github.io/">eHeart Lab</a> and <a href="http://coexlab.com/">CoEx Lab</a>.</p>
+							<p>Affiliations: 2026 Stuart Card Fellow.</p>
 							<p>My work investigates how various stakeholders (users, designers, developers) conceptualize and react to automated bias. I also build positive interventions to address these reactions.</p>
 						</div>
 						<div class="image">
@@ -48,7 +48,7 @@
 										<dl>
 											<dt>Defining and Measuring Harm</dt>
 											<dd>
-												<p>What are users’ psychological responses to AI bias? How do these responses vary based on individual differences, especially across marginalized identities? Presently, I am interested in understanding the harms of <i>language technologies</i> and <i>generative AI</i>.</p>
+												<p>What are users’ psychological responses to AI bias? How do these responses vary based on individual differences, especially across marginalized identities? Presently, I am interested in understanding the harms of generative AI.</p>
 											</dd>
 											<dt>Blame Attribution</dt>
 											<dd>
@@ -80,7 +80,8 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
-											<li><code>AIES</code> Pranav Khadpe, Kimi Wenzel, George Loewenstein, Chinmay Kulkarni, Geoff Kaufman. 2025. Explaining the Reputational Risks of AI-Mediated Communication: Messages labeled as AI-assisted are viewed as less diagnostic of the sender’s moral character.</li>
+											<li><code>EACL</code> Karina Halevy, Kimi Wenzel, Seyun Kim, Maarten Sap. 2026. Common Sense or Ableism? Rethinking Commonsense Reasoning Through the Lens of Disability.</li>
+											<li><code>AIES</code> Pranav Khadpe, Kimi Wenzel, George Loewenstein, Chinmay Kulkarni, Geoff Kaufman. 2025. <a href="https://ojs.aaai.org/index.php/AIES/article/view/36641" target="_blank">Explaining the Reputational Risks of AI-Mediated Communication: Messages labeled as AI-assisted are viewed as less diagnostic of the sender’s moral character.</a></li>
 											<li><code>CHI</code> Kimi Wenzel and Geoff Kaufman. 2024. 🏆 Best Paper Award. <br><a href="https://doi.org/10.1145/3613904.3642900" target="_blank">Designing for Harm Reduction: Communication Repair for Multicultural Users' Voice Interactions.</a></li>
 											<li><code>CHI</code> Kimi Wenzel, Nitya Devireddy, Cam Davison, and Geoff Kaufman. 2023. <br><a href="https://doi.org/10.1145/3544548.3581357" target="_blank">Can Voice Assistants Be Microaggressors? Cross-Race Psychological Responses to Failures of Automatic Speech Recognition.</a></li>
 											<li><code>CHI</code> *Isadora Krsek, *Kimi Wenzel, Sauvik Das, Jason I. Hong, and Laura Dabbish. 2022. <br><a href="https://doi.org/10.1145/3491102.3502009" target="_blank">To Self-Persuade or be Persuaded: Examining Interventions for Users’ Privacy Setting Selection.</a></li>
@@ -95,6 +96,8 @@
 									</header>
 									<div class="content">
 										<ul class="alt">
+											<li><code>InterSpeech</code> Robin Netzorg, Juliana Francis, Brooklyn Sheppard, Kimi Wenzel, Norman Makoto Su, Anna Leschanowsky, Abraham Glasser, Bowon Lee, Christine Murad, Cosmin Munteanu, Jay Cunningham, Shaomei Wu. <a href="https://sites.google.com/aimpower.org/speechai4all-at-interspeech/organizers" target="_blank">Speech AI for All: Challenging Deficit-based Approaches to Speech Science and Technology.</a></li>
+											<li><code>CHI</code> Alisha Pradhan, Maria Teleki, Tobias Weinberg, Robin Netzorg, Alyssa Hillary Zisk, Anna Seo Gyeong Choi, Jingjin Li, Raja Kushalnagar, Colin Lea, Abraham Glasser, Christian Vogler, Nan Bernstein Ratner, Ly Xīnzhèn M. Zhǎngsūn Brown, Allison Koenecke, Karen Nakamura, Shaomei Wu. <a href="https://sites.google.com/andrew.cmu.edu/speechai4all/home" target="_blank">Speech AI for All: The What, How, and Who of Measurement.</a></li>
 											<li><code>FAccT</code> Kimi Wenzel, Avijit Ghosh, Sachin Pendse, Stephanie Milani, Ajeet Singh, Laura Dabbish, Geoff Kaufman. 2025. <a href="https://earthling.my.canva.site/invisible" target="_blank">Invisible by Design? Generative AI and Mirrors of Misrepresentation.</a></li>
 											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
 										</ul>
@@ -159,3 +162,4 @@
 
 	</body>
 </html>
+
