--- a/research.html
+++ b/research.html
@@ -97,7 +97,7 @@
 									<div class="content">
 										<ul class="alt">
 											<li><code>InterSpeech</code> Robin Netzorg, Juliana Francis, Brooklyn Sheppard, Kimi Wenzel, Norman Makoto Su, Anna Leschanowsky, Abraham Glasser, Bowon Lee, Christine Murad, Cosmin Munteanu, Jay Cunningham, Shaomei Wu. <a href="https://sites.google.com/aimpower.org/speechai4all-at-interspeech/organizers" target="_blank">Speech AI for All: Challenging Deficit-based Approaches to Speech Science and Technology.</a></li>
-											<li><code>CHI</code> Alisha Pradhan, Maria Teleki, Tobias Weinberg, Robin Netzorg, Alyssa Hillary Zisk, Anna Seo Gyeong Choi, Jingjin Li, Raja Kushalnagar, Colin Lea, Abraham Glasser, Christian Vogler, Nan Bernstein Ratner, Ly Xīnzhèn M. Zhǎngsūn Brown, Allison Koenecke, Karen Nakamura, Shaomei Wu. <a href="https://sites.google.com/andrew.cmu.edu/speechai4all/home" target="_blank">Speech AI for All: The What, How, and Who of Measurement.</a></li>
+											<li><code>CHI</code> Kimi Wenzel, Alisha Pradhan, Maria Teleki, Tobias Weinberg, Robin Netzorg, Alyssa Hillary Zisk, Anna Seo Gyeong Choi, Jingjin Li, Raja Kushalnagar, Colin Lea, Abraham Glasser, Christian Vogler, Nan Bernstein Ratner, Ly Xīnzhèn M. Zhǎngsūn Brown, Allison Koenecke, Karen Nakamura, Shaomei Wu. <a href="https://sites.google.com/andrew.cmu.edu/speechai4all/home" target="_blank">Speech AI for All: The What, How, and Who of Measurement.</a></li>
 											<li><code>FAccT</code> Kimi Wenzel, Avijit Ghosh, Sachin Pendse, Stephanie Milani, Ajeet Singh, Laura Dabbish, Geoff Kaufman. 2025. <a href="https://earthling.my.canva.site/invisible" target="_blank">Invisible by Design? Generative AI and Mirrors of Misrepresentation.</a></li>
 											<li><code>CHI</code> Shaomei Wu, Kimi Wenzel, Jingjin Li, Qisheng Li, Alisha Pradhan, Raja Kushalnagar, Colin Lea, Allison Koenecke, Christian Vogler, Mark Hasegawa-Johnson, Norman Makoto Su, Nan Bernstein Ratner. 2025. <a href="https://www.shaomei.info/pdfs/CHI25_Speech_AI_workshop.pdf" target="_blank">Speech AI for All: Promoting Accessibility, Fairness, Inclusivity, and Equity.</a></li>
 										</ul>
@@ -162,4 +162,5 @@
 
 	</body>
 </html>
+
 
